송재영/0705/삭제된 게시글 막기